// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIcon render for FAIL 1`] = `
<DocumentFragment>
  <mock-stylediconbase
    aria-live="polite"
    arialabel="Failed requirement"
    classname="status-icon negative-outcome-icon"
    iconname="StatusErrorFull"
  />
</DocumentFragment>
`;

exports[`StatusIcon render for PASS 1`] = `
<DocumentFragment>
  <mock-stylediconbase
    aria-live="polite"
    arialabel="Passed test"
    classname="status-icon positive-outcome-icon"
    iconname="completedSolid"
  />
</DocumentFragment>
`;

exports[`StatusIcon render for PASS with extra class name 1`] = `
<DocumentFragment>
  <mock-stylediconbase
    aria-live="polite"
    arialabel="Passed test"
    classname="status-icon positive-outcome-icon test"
    iconname="completedSolid"
  />
</DocumentFragment>
`;

exports[`StatusIcon render for UNKNOWN 1`] = `
<DocumentFragment>
  <mock-stylediconbase
    aria-live="polite"
    arialabel="Incomplete requirement"
    classname="status-icon"
    iconname="circleRing"
  />
</DocumentFragment>
`;

exports[`StatusIcon render for default 1`] = `
<DocumentFragment>
  <mock-stylediconbase
    aria-live="polite"
    arialabel="Incomplete requirement"
    classname="status-icon"
    iconname="circleRing"
  />
</DocumentFragment>
`;
